--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <template class="frontpagelist">
       <article>
         <h2>TITLE</h2>
-        <h3><span> by USERNAME</span></h3>
+        <h3><span> By USERNAME</span></h3>
         <a class="readmore" href="">Read more</a>
       </article>
     </template>
